# ai-trade

./: .gitignore  LICENSE  PROJECT_PROGRESS.md  README.md  pyproject.toml  run.py  run_backtest.py
.playwright-mcp/: page-2026-06-03T15-00-22-873Z.yml  page-2026-06-03T15-04-35-411Z.yml  page-2026-06-03T15-07-08-818Z.yml
data/: community_scores.example.csv  exchange_intel.example.csv  futures_basis.example.csv  news_sentiment.example.csv  onchain_events.example.csv  social_aliases.example.csv  telegram_sentiment.example.csv
docs/: ant-design-component-map.md  ui-system-blue-saas.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md
docs/research/: btc-preset-validation.md  crypto-rebalance-premium.md  trading-books-strategy-playbook.md
src/trade_signal_app/: app_state.py  archive_loader.py  autotrade.py  backtest.py  binance_client.py  btc_signal.py  carry.py  community.py  config.py  data_services.py  entry_filters.py  feishu.py  indicators.py  intelligence.py  main.py  main_backtest.py  main_request_body.py  main_scan.py  main_settings.py  models.py  (+26 more)
static/: backtest.js  scan_live.js  styles.css
tests/: test_autotrade.py  test_backtest.py  test_binance_client.py  test_btc_signal.py  test_carry.py  test_community.py  test_feishu.py  test_indicators.py  test_intelligence.py  test_main.py  test_okx_client.py  test_onchain.py  test_platform.py  test_presets.py  test_runtime_config.py  test_service.py  test_ssl_compat.py  test_stat_arb.py  test_storage.py  test_strategy.py  test_strategy_builder.py  test_trading.py  test_tradingview_data.py  test_volatility.py
