[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-signal-app"
version = "0.1.0"
description = "A Binance-powered spot signal scanner with an extensible scoring engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
