[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-signal-app"
description = "A Binance-powered spot signal scanner with an extensible scoring engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
dynamic = ["version"]

[project.scripts]
trade-signal-web = "trade_signal_app.main:main"
trade-signal-backtest = "trade_signal_app.backtest:main"
trade-signal-autotrade = "trade_signal_app.autotrade:main"

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "trade_signal_app.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
